kubernetes-networks/coredns-svc-lb-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-svc-lb-udp
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: coredns
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  ports:
    - protocol: UDP
      port: 53
